New dislike button, include database.xml in resources

--- a/resources.qrc
+++ b/resources.qrc
@@ -2,10 +2,13 @@
     <qresource prefix="/pics">
         <file>qml/Webradio/like.png</file>
         <file>qml/Webradio/mute.png</file>
-        <file>qml/Webradio/notlike.png</file>
         <file>qml/Webradio/notmute.png</file>
         <file>qml/Webradio/play.png</file>
         <file>qml/Webradio/stop.png</file>
-        <file>qml/Webradio/dislike.png</file>
+        <file>qml/Webradio/appicon.png</file>
+        <file alias="dislike.png">qml/Webradio/dislike_2.png</file>
+    </qresource>
+    <qresource prefix="/xml">
+        <file>qml/Webradio/database.xml</file>
     </qresource>
 </RCC>
