--- a/resources.qrc
+++ b/resources.qrc
@@ -7,6 +7,7 @@
         <file>qml/Webradio/stop.png</file>
         <file alias="dislike.png">qml/Webradio/dislike_2.png</file>
         <file>qml/Webradio/Webradio80.png</file>
+        <file>qml/Webradio/delete.png</file>
     </qresource>
     <qresource prefix="/xml">
         <file>qml/Webradio/database.xml</file>
